=================
Changes for Crate
=================

Unreleased
==========

NOTE: Upgrading from 0.49 or earlier versions requires a full cluster restart

 - Fix: make sure sys.nodes expressions that utilize os/process/network/jvm
   services use the same stats probe per row; previously values derived from
   these services could have been from different probes

 - Fix: Stats table log entry was missing for delete-by-query statements.

 - Fix: made it possible to filter on all types of table settings

 - Added ``ALTER TABLE ONLY`` statement support.

 - Added unicast host discovery via SRV DNS records

 - Added the ``KILL ALL`` statement which can be used to cancel running
   operations

 - Added new table settings that can be set on ``CREATE TABLE``
   and changed/reset with ``ALTER TABLE``.

 - Added the ``concat`` scalar function and the concat operator ``||``.

 - Updated Elasticsearch to 1.5.2

 - Updated crash to version 0.12.0 which contains the following changes:

    - added ``--version`` to cli interface to show crash version and exit

    - Fixed broken 'mixed' output style due to overriding import

    - Improved readability of sql syntax highlighting

    - Attempting to use unknown command now results in an error

 - Added the IF NOT EXISTS clause to the CREATE TABLE statement

2015/06/03 0.49.2
=================

 - Fix: Accounted RAM wasn't freed after distributed grouping queries finished.

 - Added missing cluster settings for request circuit breaker
   and expose them via information schema

 - Made circuit breaker cluster settings settable on runtime
   and renamed the missleading prefix ``node`` to ``indices``.
   Note: This is a backward incompatibility change!

 - Fix: Row count was wrong when a `DELETE FROM` statement on a
   partitioned table hit exact 1 partition.

 - Updated crate-admin to 0.12.1 which includes following changes:

    - updated logo and icons

 - Fixed an error that could occur if the same ``delete from