@@ -31,6 +31,7 @@ public class NodeProcessExpression extends SysNodeObjectReference {
 
     public static final String OPEN_FILE_DESCRIPTORS = "open_file_descriptors";
     public static final String MAX_OPEN_FILE_DESCRIPTORS = "max_open_file_descriptors";
+    private static final String PROBE_TIMESTAMP = "probe_timestamp";
 
 
     public NodeProcessExpression(ProcessInfo processInfo, ProcessStats processStats) {
@@ -56,6 +57,14 @@ public class NodeProcessExpression extends SysNodeObjectReference {
                 } else {
                     return -1L;
                 }
+            }
+        });
+        childImplementations.put(PROBE_TIMESTAMP, new SysNodeExpression<Long>() {
+            @Override
+            public Long value() {
+                if (processStats != null) {
+                    return processStats.timestamp();
+                } else { return -1L; }
             }
         });
         childImplementations.put(NodeProcessCpuExpression.NAME, new NodeProcessCpuExpression(processStats));
